--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -9,7 +9,11 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/Theme.Mareu">
-        <activity android:name=".MainActivity">
+        <activity android:name=".ui_meeting_list.ListMeetingActivity"></activity>
+        <activity
+            android:name=".ui_meeting_list.AddMeetingActivity"
+            android:label="@string/title_activity_add_meeting" />
+        <activity android:name=".ui_meeting_list.MainActivity">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
