--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -16,7 +16,7 @@
             </intent-filter>
         </activity>
         <activity
-            android:name=".ui_meeting_list.AddMeetingActivity"
+            android:name=".events.AddMeetingActivity"
             android:label="@string/title_activity_add_meeting" />
 
     </application>
