--- a/app/build.gradle
+++ b/app/build.gradle
@@ -41,6 +41,9 @@ dependencies {
     implementation 'androidx.preference:preference:1.1.1'
     implementation 'androidx.recyclerview:recyclerview:1.2.0'
 
+    // EVENT BUS
+    implementation 'org.greenrobot:eventbus:3.2.0'
+
     // BINDING
     implementation 'com.jakewharton:butterknife:10.2.3'
     annotationProcessor 'com.jakewharton:butterknife-compiler:10.2.3'
