--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -9,16 +9,17 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/Theme.Mareu">
-        <activity android:name=".ui_meeting_list.ListMeetingActivity">
+        <activity android:name=".ui_meeting_list.ListMeetingActivity"
+            android:theme="@style/Theme.Mareu.NoActionBar">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
-
         <activity
             android:name=".ui_meeting_list.CreateMeetingActivity"
-            android:label="@string/title_activity_add_meeting" />
+            android:label="@string/title_activity_add_meeting"
+            android:theme="@style/Theme.Mareu.NoActionBar"/>
 
     </application>
 
