--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -1,7 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
     package="com.pierre44.mareu">
-
     <application
         android:allowBackup="true"
         android:icon="@mipmap/ic_launcher"
@@ -9,7 +8,8 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/Theme.Mareu">
-        <activity android:name=".ui_meeting_list.ListMeetingActivity"
+        <activity
+            android:name=".ui_meeting_list.ListMeetingActivity"
             android:theme="@style/Theme.Mareu.NoActionBar">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
@@ -19,12 +19,13 @@
         <activity
             android:name=".ui_meeting_list.CreateMeetingActivity"
             android:label="@string/title_activity_add_meeting"
-            android:theme="@style/Theme.Mareu.NoActionBar"/>
+            android:parentActivityName=".ui_meeting_list.ListMeetingActivity"
+            android:theme="@style/Theme.Mareu.NoActionBar" />
         <activity
             android:name=".ui_meeting_list.MeetingDetailsActivity"
             android:parentActivityName=".ui_meeting_list.ListMeetingActivity"
             android:label="@string/title_activity_detail_meeting"
-            android:theme="@style/Theme.Mareu.NoActionBar"/>
+            android:theme="@style/Theme.Mareu" />
     </application>
 
 </manifest>
