--- a/app/build.gradle
+++ b/app/build.gradle
@@ -18,7 +18,7 @@ android {
     }
 
     testOptions {
-        animationsDisabled = true
+        animationsDisabled = false
     }
 
     buildTypes {
@@ -38,8 +38,8 @@ dependencies {
     implementation fileTree(dir: 'libs', include: ['*.jar'])
 
     // MATERIAL & LAYOUT
-    implementation 'androidx.appcompat:appcompat:1.3.0'
-    implementation 'com.google.android.material:material:1.3.0'
+    implementation 'androidx.appcompat:appcompat:1.3.1'
+    implementation 'com.google.android.material:material:1.4.0'
     implementation 'androidx.constraintlayout:constraintlayout:2.0.4'
     implementation 'androidx.legacy:legacy-support-v4:1.0.0'
     implementation 'androidx.recyclerview:recyclerview:1.2.1'
